set(APP_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})

include_directories(${APP_SRC_DIR})

set(APP_SERVER_NAME appserver)
set(APP_CLIENT_NAME appclient)
set(RECV_FILE_NAME recvfile)
set(SEND_FILE_NAME sendfile)

set(APP_SERVER_SRC appserver.cpp)
set(APP_CLIENT_SRC appclient.cpp)
set(RECV_FILE_SRC recvfile.cpp)
set(SEND_FILE_SRC sendfile.cpp)


get_property(UDT_INCLUDE GLOBAL PROPERTY "UDT_INCLUDE_DIR" )
get_property(UDT_NAME GLOBAL PROPERTY "UDT_NAME" )

include_directories(${UDT_INCLUDE})

#APP SERVER
add_executable(${APP_SERVER_NAME} ${APP_SERVER_SRC})
target_link_libraries(${APP_SERVER_NAME} ${UDT_NAME}s)

#APP CLIENT
add_executable(${APP_CLIENT_NAME} ${APP_CLIENT_SRC})
target_link_libraries(${APP_CLIENT_NAME} ${UDT_NAME}s)

#RECV FILE
add_executable(${RECV_FILE_NAME} ${RECV_FILE_SRC})
target_link_libraries(${RECV_FILE_NAME} ${UDT_NAME}s)

#SEND FILE
add_executable(${SEND_FILE_NAME} ${SEND_FILE_SRC})
target_link_libraries(${SEND_FILE_NAME} ${UDT_NAME}s)

install(TARGETS ${APP_SERVER_NAME} RUNTIME DESTINATION ${PROJECT_BINARY_DIR}/bin BUNDLE DESTINATION ${PROJECT_BINARY_DIR}/bin)
install(TARGETS ${APP_CLIENT_NAME} RUNTIME DESTINATION ${PROJECT_BINARY_DIR}/bin BUNDLE DESTINATION ${PROJECT_BINARY_DIR}/bin)
install(TARGETS ${RECV_FILE_NAME} RUNTIME DESTINATION ${PROJECT_BINARY_DIR}/bin BUNDLE DESTINATION ${PROJECT_BINARY_DIR}/bin)
install(TARGETS ${SEND_FILE_NAME} RUNTIME DESTINATION ${PROJECT_BINARY_DIR}/bin BUNDLE DESTINATION ${PROJECT_BINARY_DIR}/bin)



